tests/ui/missing_intopy.stderr
error[E0277]: the trait bound `Blah: IntoPy<PyDetached<PyAny>>` is not satisfied
 --> tests/ui/missing_intopy.rs:3:1
  |
3 | #[pyo3::pyfunction]
  | ^^^^^^^^^^^^^^^^^^^ the trait `IntoPy<PyDetached<PyAny>>` is not implemented for `Blah`
  |
  = help: the following other types implement trait `IntoPy<T>`:
            <bool as IntoPy<PyDetached<PyAny>>>
            <char as IntoPy<PyDetached<PyAny>>>
            <isize as IntoPy<PyDetached<PyAny>>>
            <i8 as IntoPy<PyDetached<PyAny>>>
            <i16 as IntoPy<PyDetached<PyAny>>>
            <i32 as IntoPy<PyDetached<PyAny>>>
            <i64 as IntoPy<PyDetached<PyAny>>>
            <i128 as IntoPy<PyDetached<PyAny>>>
          and $N others
  = note: required for `Blah` to implement `OkWrap<Blah>`
  = note: this error originates in the attribute macro `pyo3::pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
